# minimize_atomwork

./: .gitignore  IMPROVEMENTS_PHASE2.md  LICENSE  README.md  REFACTORING_NOTES.md  pyproject.toml
.claude/: settings.json
analysis/: analysis.ipynb
minimum_atomworks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
minimum_atw/: __init__.py  chunked.py  cli.py  config.py  pipeline.py  tables.py  workspace.py
minimum_atw/analysis/: analysis.ipynb
minimum_atw/core/: __init__.py  _execute.py  _merge.py  _prepare.py  _schedule.py  config.py  extensions.py  output_files.py  pipeline.py  registry.py  tables.py
minimum_atw/docs/plans/: 2026-03-09-cdr-entropy-cluster-gating-design.md  2026-03-09-cdr-entropy-cluster-gating.md
minimum_atw/examples/: README.md
minimum_atw/examples/chunk_run/: README.md  chunk_antibody_antigen_01.yaml  chunk_antibody_antigen_02.yaml  chunk_config_manifest_example.txt
minimum_atw/examples/data/: README.md
minimum_atw/examples/data/antibody_antigen/: rank01_design_spec_5.cif  rank02_design_spec_0.cif  rank03_design_spec_3.cif  rank04_design_spec_7.cif  rank05_design_spec_2.cif  rank06_design_spec_8.cif  rank07_design_spec_9.cif  rank08_design_spec_1.cif  rank09_design_spec_6.cif  rank10_design_spec_4.cif
minimum_atw/examples/input/chunk_run/: README.md  chunk_antibody_antigen_01.yaml  chunk_antibody_antigen_02.yaml
minimum_atw/examples/input/large_run/: HPC_SLURM_GUIDE.md  README.md  example_antibody_antigen_chunked.yaml  example_protein_protein_chunked.yaml  example_vhh_antigen_chunked.yaml
minimum_atw/examples/input/local_test/: test_rosetta_preprocess_no_rosetta.yaml
minimum_atw/examples/input/multi_dataset/: README.md  compare_merged_datasets.yaml  dataset_a_antibody_antigen.yaml  dataset_b_antibody_antigen.yaml
minimum_atw/examples/input/simple_run/: README.md  example_antibody_antigen_light.yaml  example_antibody_antigen_pdb.yaml  example_antibody_antigen_realdata_all_non_rosetta.yaml  example_antibody_antigen_rosetta.yaml  example_protein_protein_complex.yaml  example_vhh_antigen.yaml
minimum_atw/examples/large_run/: HPC_SLURM_GUIDE.md  README.md  analyze_antibody_antigen_chunked.ipynb  example_antibody_antigen_chunked.yaml  example_protein_protein_chunked.yaml  example_vhh_antigen_chunked.yaml
minimum_atw/examples/multi_dataset/: README.md  compare_merged_datasets.yaml  dataset_a_antibody_antigen.yaml  dataset_b_antibody_antigen.yaml
minimum_atw/examples/multi_dataset/out_data/chunk_01/: dataset.parquet  pdb.parquet  plugin_status.parquet  run_metadata.json
minimum_atw/examples/multi_dataset/out_data/chunk_02/: dataset.parquet  pdb.parquet  plugin_status.parquet  run_metadata.json
minimum_atw/examples/multi_dataset/out_merge_ab/: dataset.parquet  dataset_metadata.json  pdb.parquet  plugin_status.parquet
minimum_atw/examples/simple_run/: README.md  example_antibody_antigen_light.yaml  example_antibody_antigen_light_with_rosetta.yaml  example_antibody_antigen_pdb.yaml  example_antibody_antigen_pdb_with_rosetta.yaml  example_antibody_antigen_realdata_all_non_rosetta.yaml  example_antibody_antigen_rosetta.yaml  example_protein_protein_complex.yaml  example_protein_protein_complex_with_rosetta.yaml  example_vhh_antigen.yaml  example_vhh_antigen_with_rosetta.yaml
minimum_atw/examples/test/: test_rosetta_preprocess_no_rosetta.yaml
minimum_atw/plugins/: __init__.py  base.py  sequence.py
minimum_atw/plugins/antibody_analysis/: antibody_cdr_lengths.py  antibody_cdr_sequences.py  antibody_numbering.py  base.py
minimum_atw/plugins/dataset/calculation/: __init__.py  annotations.py  base.py  cdr_entropy.py  cluster.py  interface_summary.py  runtime.py
minimum_atw/plugins/dataset/manipulation/: __init__.py  base.py  superimpose.py
minimum_atw/plugins/dataset/quality_control/: __init__.py  base.py
minimum_atw/plugins/dataset_analysis/: __init__.py  annotations.py  base.py  cdr_entropy.py  interface_summary.py  runtime.py
minimum_atw/plugins/dataset_annotation/: __init__.py
minimum_atw/plugins/interface_analysis/: __init__.py  abepitope_score.py  interface_contacts.py  interface_metrics.py  interface_residue_metrics.py  rosetta_interface.py
minimum_atw/plugins/manipulation/: __init__.py  base.py  center.py  chain_continuity.py  structure_clashes.py  superimpose.py
minimum_atw/plugins/pdb/: __init__.py  _utils.py  annotations.py  interface_annotations.py  rosetta_common.py  superimpose_common.py
minimum_atw/plugins/pdb/calculation/: __init__.py  base.py
minimum_atw/plugins/pdb/calculation/antibody_analysis/: __init__.py  base.py  (+3 more)
minimum_atw/plugins/pdb/manipulation/: __init__.py  base.py  center.py  rosetta_preprocess.py  superimpose.py
minimum_atw/plugins/pdb/quality_control/: __init__.py  base.py  chain_continuity.py  structure_clashes.py
minimum_atw/plugins/structure_analysis/: __init__.py  chain_stats.py  identity.py
minimum_atw/plugins/template/: template_plugin.py
minimum_atw/runtime/: __init__.py  _pool.py  chunked.py  slurm.py  stage_buffer.py  workspace.py
minimum_atw/tests/: README.md  helpers.py  test_abepitope_plugin.py  test_antibody_numbering.py  test_cdr_entropy.py  test_chunk_planning.py  test_config.py  test_dataset_analysis_runtime.py  test_dataset_cluster.py  test_dataset_merge.py  test_extensions.py  test_integration_smoke.py  test_interface_contacts.py  test_interface_metrics.py  test_interface_metrics_plugin.py  test_package_init.py  test_pdb_annotations.py  test_plugin_execution.py  test_prepare_sections.py  test_quality_control_clashes.py  test_rosetta_interface.py  test_slurm_submission.py  test_stage_buffer.py  test_structure_stats.py  test_superimpose_features.py  test_tables.py
out_antibody_antigen_pdb/: dataset.parquet  pdb.parquet  run_metadata.json
scripts/: make_rosetta_singularity_wrappers.sh
tests/: test_cdr_entropy.py  test_config.py  test_dataset_analysis_runtime.py  test_dataset_merge.py  test_integration_smoke.py  test_interface_contacts.py  test_package_init.py  test_registry.py  test_stage_buffer.py  test_tables.py
(+46 files in other folders)
