[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimum-atomworks"
version = "0.1.0"
description = "Minimal plugin-style structural metadata framework inspired by atw_pp"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["protein", "structure", "antibody", "vhh", "parquet", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "biotite>=1.4,<2",
  "numpy>=2.4,<3",
  "pandas>=2.3,<3",
  "pydantic>=2.12,<3",
  "pyarrow>=17,<18",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
# Antibody numbering support relies on both abnumber and its ANARCII backend.
antibody = [
  "abnumber>=0.4.4,<0.5",
  "anarcii>=2.0.5,<3",
]

# AbEpiTope's published package metadata does not currently pull in the full
# model stack, so declare the runtime pieces explicitly here.
# Note: the external `hmmsearch` binary from HMMER is still required on PATH.
abepitope = [
  "abepitope>=0.1,<0.2",
  "torch>=2.7,<3",
  "fair-esm>=2.0,<3",
]

# AbLang2 is optional but needs Torch in practice.
ablang2 = [
  "ablang2",
  "torch>=2.7,<3",
]

esm = [
  "torch>=2.7,<3",
  "fair-esm>=2.0,<3",
]

all = [
  "abnumber>=0.4.4,<0.5",
  "anarcii>=2.0.5,<3",
  "abepitope>=0.1,<0.2",
  "ablang2",
  "torch>=2.7,<3",
  "fair-esm>=2.0,<3",
]

[project.scripts]
minimum-atomworks = "minimum_atw.cli:main"
minimum_atw = "minimum_atw.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["minimum_atw*"]

[tool.setuptools.package-data]
minimum_atw = [
  "examples/**/*.yaml",
  "examples/**/*.md",
  "examples/**/*.ipynb",
]
