[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimum-atomworks"
version = "0.1.0"
description = "Minimal plugin-style structural metadata framework inspired by atw_pp"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["protein", "structure", "antibody", "vhh", "parquet", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  # Base install includes the full non-Rosetta Python stack used by the
  # built-in plugins so `pip install -e .` is enough on another machine.
  "biotite>=1.4,<1.5",
  "numpy>=2.4,<2.5",
  "pandas>=2.3,<2.4",
  "pydantic>=2.12,<2.13",
  "pyarrow>=17,<18",
  "pyyaml>=6.0,<6.1",
  "abnumber>=0.4.4,<0.5",
  "anarcii>=2.0.5,<2.1",
  "biopython>=1.86,<1.87",
  "abepitope>=0.1,<0.2",
  "ablang2>=0.2.1,<0.3",
  "torch>=2.7,<2.8",
  "fair-esm>=2.0,<2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10",
]

# Compatibility aliases for users who still install via extras.
antibody = [
  "abnumber>=0.4.4,<0.5",
  "anarcii>=2.0.5,<2.1",
]

# AbEpiTope's published package metadata does not currently pull in the full
# model stack, so declare the runtime pieces explicitly here.
# Note: the external `hmmsearch` binary from HMMER is still required on PATH.
abepitope = [
  "abepitope>=0.1,<0.2",
  "torch>=2.7,<2.8",
  "fair-esm>=2.0,<2.1",
]

# AbLang2 is optional but needs Torch in practice.
ablang2 = [
  "ablang2>=0.2.1,<0.3",
  "torch>=2.7,<2.8",
]

esm = [
  "torch>=2.7,<2.8",
  "fair-esm>=2.0,<2.1",
]

all = [
  "abnumber>=0.4.4,<0.5",
  "anarcii>=2.0.5,<2.1",
  "biopython>=1.86,<1.87",
  "abepitope>=0.1,<0.2",
  "ablang2>=0.2.1,<0.3",
  "torch>=2.7,<2.8",
  "fair-esm>=2.0,<2.1",
]

[project.scripts]
minimum-atomworks = "minimum_atw.cli:main"
minimum_atw = "minimum_atw.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["minimum_atw*"]

[tool.setuptools.package-data]
minimum_atw = [
  "examples/**/*.yaml",
  "examples/**/*.md",
  "examples/**/*.ipynb",
]

[tool.pytest.ini_options]
testpaths = ["minimum_atw/tests"]
