[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimum-atomworks"
version = "0.1.0"
description = "Minimal plugin-style structural metadata framework inspired by atw_pp"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["protein", "structure", "antibody", "vhh", "parquet", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  # Core install — all packages are available on PyPI.
  # GPU/optional plugins (abepitope, ablang2, esm_if1) must be installed
  # separately via extras; see the README for abepitope's GitHub-only install.
  "biotite>=1.4,<1.5",
  "numpy>=2.0",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "abnumber>=0.4.4",
  "anarcii>=2.0.5",
  "biopython>=1.83",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

# AbEpiTope is NOT on PyPI — install from GitHub first:
#   pip install git+https://github.com/mnielLab/AbEpiTope-1.0.git
# Then install this extra for the remaining runtime deps.
# The external `hmmsearch` binary from HMMER is also required on PATH.
abepitope = [
  "torch>=2.0",
  "fair-esm>=2.0",
]

# AbLang2 is on PyPI but needs Torch in practice.
ablang2 = [
  "ablang2>=0.2.1",
  "torch>=2.0",
]

esm = [
  "torch>=2.0",
  "fair-esm>=2.0",
]

# All PyPI-installable optional deps.
# abepitope itself must still be installed from GitHub separately.
all = [
  "ablang2>=0.2.1",
  "torch>=2.0",
  "fair-esm>=2.0",
]

[project.scripts]
minimum-atomworks = "minimum_atw.cli:main"
minimum_atw = "minimum_atw.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["minimum_atw*"]

[tool.setuptools.package-data]
minimum_atw = [
  "examples/**/*.yaml",
  "examples/**/*.md",
  "examples/**/*.ipynb",
]

[tool.pytest.ini_options]
testpaths = ["minimum_atw/tests"]
